<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_from_server"
        android:orderInCategory="100"
        android:title="@string/action_load_from_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_server"
        android:orderInCategory="100"
        android:title="@string/action_edit_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_ssid_search_name"
        android:orderInCategory="100"
        android:title="@string/action_set_ssid_search_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_logs"
        android:orderInCategory="100"
        android:title="@string/action_view_logs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_test_trip"
        android:orderInCategory="100"
        android:title="@string/action_test_trip"
        app:showAsAction="never" />
</menu>
